--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "puppeteer": "^1.17.0"
+    "puppeteer": "^1.17.0",
+    "puppeteer-firefox": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.8",
