--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   "scripts": {
     "start": "ts-node index.ts",
     "lint": "eslint ./**/*.ts",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "test": "jest --config ./tests/jest.config.js"
   },
   "dependencies": {
     "puppeteer": "^1.17.0",
     "puppeteer-firefox": "^0.5.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
     "@types/node": "^12.0.8",
     "@types/puppeteer": "^1.12.4",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
@@ -22,7 +24,9 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "jest": "^24.8.0",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   }
